--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-488.1KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-283.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-265.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-729.4KB/s(Youtube:不良林), server: 167.88.62.68, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-304.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1011.1KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1010.3KB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.63.79, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-965.6KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 167.88.61.175, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 167.88.61.175, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.63.79, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-336.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-268.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-274.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇭🇰 香港-256.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
