--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1011.1KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1010.3KB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.63.79, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-965.6KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 167.88.61.175, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 167.88.61.175, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-336.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-268.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-274.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇭🇰 香港-256.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-634.5KB/s(Youtube:不良林), server: 167.88.63.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.61.175, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇸🇬 新加坡-494.5KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 167.88.61.213, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-711.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-965.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-571.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-510.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1011.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-965.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-494.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-510.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
