--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-513.6KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-634.5KB/s(Youtube:不良林), server: 167.88.63.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-501.6KB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-418.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-422.2KB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-965.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇺🇸 美国-241.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-981.3KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-349.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-472.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-220.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-611.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇸🇬 新加坡-316.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-742.9KB/s(Youtube:不良林), server: 167.88.61.175, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-478.6KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-662.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-634.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-472.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
