--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-965.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-241.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-220.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-611.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇸🇬 新加坡-316.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-742.9KB/s(Youtube:不良林), server: 167.88.61.175, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-478.6KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-662.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-284.9KB/s(Youtube:不良林), server: 167.88.61.213, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-617.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 167.88.61.213, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-576.4KB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-791.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-720.1KB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-355.6KB/s(Youtube:不良林), server: 167.88.63.79, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 167.88.63.79, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-301.0KB/s(Youtube:不良林), server: 167.88.61.175, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-310.0KB/s(Youtube:不良林), server: 167.88.63.79, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-316.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-742.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-478.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-662.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-284.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-576.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-791.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
